# crypto-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  prompt.txt  pyproject.toml  requirements.txt  ruff.toml  setup.sh  sweep.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
scripts/: backtest_2026_detailed.py  backtest_budget_compare.py  compare_budget_allocation.py  deploy.sh  healthcheck.sh
src/: __init__.py  main.py
src/backtest/: __init__.py  data_loader.py  engine.py  report.py
src/binance/: __init__.py  client.py  filters.py  types.py
src/config/: __init__.py  settings.py
src/execution/: __init__.py  executor.py  reconciler.py  state.py
src/indicators/: __init__.py  ema.py  percent_change.py  rsi.py  volume.py
src/logging/: __init__.py  json_logger.py
src/notifications/: __init__.py  telegram.py
src/reports/: daily_ai.py
src/strategy/: __init__.py  risk.py  signals.py
tests/: conftest.py  test_filters.py  test_indicators.py  test_risk.py  test_signals.py  test_volume.py
